--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <div class="flex-container-grid">
                 <div>
-                    <h1>Hi, I'am Editorial by HTML5 UP</h1>
+                    <h1>Hi, I'am Editorial <br> by HTML5 UP</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, obcaecati! 
                         Ducimus aspernatur mollitia placeat ad tempora sint consequatur amet magni. 
                         Eius quidem officiis maiores laboriosam adipisci illo, odit qui tenetur id at totam 
