--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </section>
 
         <section style="border-top: solid black 0.8px;" >
+          <h2>Erat lacinia</h2>
             <div class="grid-container">
                     <div class="grid-item">
                         <div class="flex-container-grid">
